<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_stores" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_settings" />

    </group>

    <item android:title="S2Aexpress">
        <menu>
            <item
                android:id="@+id/nav_track"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_track" />
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_notifications" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_help" />
        </menu>
    </item>

</menu>
