<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="25dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="25dp"
            android:text="@string/text_language"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/spinnerlanguage"
            android:inputType="text" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnchangepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textAlignment="textStart"
        android:text="@string/button_changepsswd"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Switch
        android:id="@+id/notificationsxitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_notifications"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/btnaddcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="8dp"
        android:text="@string/button_addcard"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="italic" />


</LinearLayout>